kubernetes-postgres/kubernetes/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-health-check
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-health-check
  template:
    metadata:
      labels:
        app: postgres-health-check
    spec:
      containers:
        - name: postgres-health-check
          image: registry.onstackit.cloud/kubernetes-playground/postgres-health-check:1.0.0
          ports:
            - containerPort: 5555
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      imagePullSecrets:
        - name: stackit-container-reg-secret
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-health-check
spec:
  selector:
    app: postgres-health-check
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5555
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    app.kubernetes.io/name: "my-ske"
    app.kubernetes.io/part-of: "my-ske"
spec:
  ingressClassName: nginx
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: postgres-health-check
                port:
                  number: 80
